# openfilter

./: .gcloudignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  README.pypi.md  RELEASE.md  VERSION  cloudbuild-cascade.yaml  cloudbuild.yaml  pyproject.toml  test_capture_diagnostic.py
.github/: dependabot.yml
.github/rulesets/: main.json
.github/workflows/: apply-rulesets.yaml  cascade-on-tag.yaml  ci.yaml  create-release.yaml  external-review-freshness.yaml  sast-secrets.yml  security-scan.yaml
docker/: image_in.Dockerfile  image_out.Dockerfile  mqtt_out.Dockerfile  recorder.Dockerfile  rest.Dockerfile  video_in.Dockerfile  video_out.Dockerfile  webvis.Dockerfile
docker/monitoring/: alert-rules.yaml  alertmanager.yaml  docker-compose.monitoring.yaml  grafana-dashboard.json  grafana-dashboards.yaml  grafana-datasources.yaml  otel-collector-config.yaml  prometheus.yaml
docs/: OpenFilter_Onboarding_Pipelines_With_Visualization_And_JSON.md  _category_.json  building-your-first-pipeline-consolidated.md  declarative-config.md  design-video-in-pts.md  design-video-in-seekable-replay.md  image-in-filter.md  image-out-filter.md  metrics-architecture.md  migration-guide.md  monitoring-demo.md  monitoring.md  mqtt-out-filter.md  observability-summary.md  observability.md  overview.md  recorder-filter.md  rest-filter.md  screen-in-filter.md  util-filter.md  video-in-filter.md  video-out-filter.md  webvis-filter.md  your-first-filter.md
examples/: TESTE.PY
examples/hello-ocr/: pyproject.toml  requirements.txt
examples/hello-world/: README.md  pyproject.toml
examples/image-output-demo/: README.md  main.py
examples/image_in/: .gitignore  Dockerfile  Dockerfile.dev  README.md  README_scenarios.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  main_both_sources.py  main_gcs.py  requirements.txt  scenario1_empty_start.py  scenario2_excluded_images.py  scenario3_queue_empty.py  scenario4_multi_fps.py  scenario5_looping_demo.py  test_gcs.py
examples/monitoring-demo/: .env.example  Dockerfile  Makefile  README.md  docker-compose.pipelines.yaml  docker-compose.yaml  run_pipeline.py  run_pipeline_p4.py  trigger_alert.py  verify_alerts.py  verify_metrics.py  verify_pipelines.py  watchdog.sh
examples/monitoring-demo/filters/: grayscale.py  (+3 more)
examples/observability-demo/: Makefile  README.md  app.py  app_otel_only.py  config.env.example  config_otel_only.env  create_sample_video.py  custom_processor.py  custom_visualizer.py  requirements.txt  safe_metrics.yaml  safe_metrics_otel.yaml  safe_metrics_restrictive.yaml  safe_metrics_with_config.yaml  test_demo.py  test_otel_only.py
examples/open-lineage-test/: main.py
examples/openfilter-heroku-demo/: Makefile  README.md  app.py  docker-compose.yaml  requirements.txt
examples/sample-operation/: filters.py
examples/screen_in/: README.md  main.py  requirements.txt  scenario1_region_capture.py  scenario2_multi_monitor.py  scenario3_fps_control.py
examples/text-generator-demo/: .gitignore  Makefile  README.md  config_examples.py  main.py  pyproject.toml  text_generator_filter.py
examples/video-pipeline-demo/: Makefile  README.md  env-example  face_enhancer.py  main.py  main_gcs_enhanced.py  main_gcs_simple.py  main_rtsp.py  pyproject.toml  start_rtsp_demo.sh  test_pipeline.py
examples/webvis/: Makefile  README.md
openfilter/cli/: __main__.py  cmd_emit_schema.py  cmd_run.py
openfilter/filter_runtime/: __init__.py  config.py  csv_exporter.py  filter.py  formats.py  frame.py  gpu.py  metrics.py  mq.py  output.py  shapes.py  shm_transport.py  zeromq.py
openfilter/lineage/: lineage_client.py  openlineage_client.py  test.py  teste2.py  teste3.py
openfilter/observability/: __init__.py  _otlp.py  bridge.py  client.py  config.py  lineage.py  registry.py  specs.py  tracing.py
scripts/: build-filters.sh  check_constraint.py  make_pypi_readme.py  measure_pipelines.py  perf_waterfall.py  profile_pipeline.py
scripts/cascade/: bump-and-pr.sh  bump-strategy.sh  check_constraint.py  discover.sh
tests/: helpers.py  test_append_env_vars.py  test_benchmarks.py  test_cascade_bump_strategy.py  test_cascade_check_constraint.py  test_cli.py  test_emit_schema_cli.py  test_filter.py  test_filter_config_base.py  test_filter_env_vars.py  test_filter_image_in.py  test_filter_image_out.py  test_filter_rest.py  test_filter_util.py  test_filter_video_in.py  test_filter_video_out.py  test_filter_webvis.py  test_frame_accumulation.py  test_gpu.py  test_gpu_preload.py  test_gpu_usage_percent_float.py  test_http_security.py  test_lazy_imports.py  test_mq.py  test_observability_client_build_exporter.py  test_open_telemetry_exporter_factory.py  test_output_schema.py  test_telemetry.py  test_timing_metrics.py  test_tracing.py  test_validate_device.py  test_zeromq.py
tests/integration/: conftest.py  test_tracing_export.py
(+19 files in other folders)
