[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfilter*"]

[project]
name = "openfilter"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "numpy==2.2.6",
  "opencv-python-headless==4.12.0.88",
  "psutil==7.1.3",
  "pyzmq==27.1.0",
  "openlineage-python==1.33.0",
  "requests==2.32.4",
  "scarf-sdk==0.1.3",
  "opentelemetry-api==1.34.1",
  "opentelemetry-exporter-gcp-monitoring==1.9.0a0",
  "opentelemetry-exporter-otlp==1.34.1",
  "opentelemetry-exporter-otlp-proto-common==1.34.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.34.1",
  "opentelemetry-exporter-otlp-proto-http==1.34.1",
  "opentelemetry-proto==1.34.1",
  "opentelemetry-resourcedetector-gcp==1.9.0a0",
  "opentelemetry-sdk==1.34.1",
  "opentelemetry-semantic-conventions==0.55b1"

]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.distutils.bdist_wheel]
python-tag = "py3"

[project.scripts]
openfilter = "openfilter.cli.__main__:main"


[project.optional-dependencies]

dev = [
  "build==1.2.1",
  "docker==7.1.0",
  "setuptools==80.9.0",  # already included in base deps
  "twine>=6.1.0,<7",
  "wheel==0.45.1",
  "pytest==8.3.4",
  "jq==1.8.0",
  "pytest-cov==7.0.0",
]

mqtt_out = [
  "paho-mqtt==2.1.0",
  "setuptools==80.9.0",
]

recorder = []

image_in = [
  "boto3>=1.26.0",
  "google-cloud-storage==3.5.0",
]

image_out = []

rest = [
  "fastapi==0.121.0",
  "uvicorn==0.38.0",
  "python-multipart==0.0.20",
]

util = []
video = []

video_in = [
  "setuptools==80.9.0",
  "vidgear[core]==0.3.3",
  "boto3>=1.26.0",
]

video_out = [
  "setuptools==80.9.0",
  "vidgear[core]==0.3.3",
]

webvis = [
  "fastapi==0.121.0",
  "uvicorn==0.38.0",
]

all = [
  "setuptools==80.9.0",

  "paho-mqtt==2.1.0",

  "fastapi==0.121.0",
  "uvicorn==0.38.0",
  "python-multipart==0.0.20",

  "google-cloud-monitoring==2.22.2",
  "google-cloud-storage==3.5.0",

  "vidgear[core]==0.3.3",
  "boto3>=1.26.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
