[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfilter*"]

[project]
name = "openfilter"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "numpy~=2.2.6",
  "opencv-python-headless~=5.0.0.93",
  "psutil~=7.2.1",
  "pyzmq~=27.1.0",
  "openlineage-python~=1.51.0",
  "requests~=2.34.2",
  "scarf-sdk~=0.2.1",
  "opentelemetry-api~=1.44.0",
  "opentelemetry-exporter-gcp-monitoring~=1.12.0a0",
  "opentelemetry-exporter-otlp~=1.44.0",
  "opentelemetry-exporter-otlp-proto-common~=1.44.0",
  "opentelemetry-exporter-otlp-proto-grpc~=1.44.0",
  "opentelemetry-exporter-otlp-proto-http~=1.44.0",
  "opentelemetry-proto~=1.44.0",
  "opentelemetry-resourcedetector-gcp~=1.12.0a0",
  "opentelemetry-sdk~=1.44.0",
  "opentelemetry-semantic-conventions~=0.65b0",

  "pydantic~=2.13.4",
  "pydantic-settings~=2.6",
  "typing-extensions>=4.6",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.distutils.bdist_wheel]
python-tag = "py3"

[project.scripts]
openfilter = "openfilter.cli.__main__:main"


[project.optional-dependencies]

dev = [
  "build~=1.5.0",
  "docker~=7.2.0",
  "setuptools~=83.0.0",     # already included in base deps
  "twine~=6.2.0",
  "wheel~=0.47.0",
  "pytest~=9.1.1",
  "jq~=1.12.0",
  "pytest-cov~=7.1.0",
  "pytest-benchmark>=5.1.0",
]

mqtt_out = ["paho-mqtt~=2.1.0", "setuptools~=83.0.0"]

recorder = []

image_in = ["boto3>=1.42.31", "google-cloud-storage~=3.13.0"]

image_out = []

rest = ["fastapi~=0.139.2", "uvicorn~=0.51.0", "python-multipart~=0.0.32"]

util = []
video = []

video_in = ["boto3>=1.42.31"]

video_out = ["av~=17.1.0"]

webvis = ["fastapi~=0.139.2", "uvicorn~=0.51.0"]

all = [
  "paho-mqtt~=2.1.0",

  "fastapi~=0.139.2",
  "uvicorn~=0.51.0",
  "python-multipart~=0.0.32",

  "google-cloud-monitoring~=2.31.0",
  "google-cloud-storage~=3.13.0",

  "av~=17.1.0",
  "boto3>=1.42.31",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
